# rVADfast

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  python-package.yml
notebooks/: rVAD_example.ipynb  rVADfast_example.ipynb
notebooks/data/LibriSpeech_example/train-clean-100/8629/261140/: 8629-261140-0000.flac  8629-261140-0001.flac  8629-261140-0002.flac  8629-261140-0003.flac  8629-261140-0004.flac  8629-261140-0005.flac  8629-261140-0006.flac  8629-261140-0007.flac  8629-261140-0008.flac  8629-261140-0009.flac  8629-261140-0010.flac  8629-261140-0011.flac  8629-261140-0012.flac  8629-261140-0013.flac  8629-261140-0014.flac  8629-261140-0015.flac  8629-261140-0016.flac  8629-261140-0017.flac  8629-261140-0018.flac  8629-261140-0019.flac  8629-261140-0020.flac  8629-261140.alignment.txt
src/rVADfast/: __init__.py  rVADfast.py
src/rVADfast/legacy_files/: rVAD_fast.py  rVAD_fast_stream.py  rvad_fast_original.py  speechproc.py
src/rVADfast/process/: __init__.py  process.py
src/rVADfast/speechproc/: __init__.py  speechproc.py
tests/rVADfast/process/: test_process.py
