[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rVADfast"
version = "0.0.2"
description = "rVADfast - a fast and robust unsupervised VAD"
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["Audio", "Tools", "VAD", "Speech", "Speech Processing"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    'Topic :: Scientific/Engineering',
    'Topic :: Multimedia :: Sound/Audio',
]
dependencies = [
    "numpy >= 1.23.5",
    "scipy >= 1.10.0",
    "audiofile >= 1.1.1",
    "tqdm >= 4.64.1"
]
authors = [
    {name="Zheng-Hua Tan", email = "zt@es.aau.dk"},
    {name="Achintya Kumar Sarkar", email="sarkar.achintya@gmail.com"},
    {name="Holger Severin Bovbjerg", email = "hsbo@es.aau.dk"}
]
maintainers = [
    {name="Holger Severin Bovbjerg", email = "hsbo@es.aau.dk"},
    {name="Zheng-Hua Tan", email = "zt@es.aau.dk"}
]

[project.scripts]
rVADfast_process = "rVADfast.process:main"

[project.urls]  # Optional
Homepage = "https://github.com/zhenghuatan/rVADfast/"
Repository = "https://github.com/zhenghuatan/rVADfast.git"
Issues = "https://github.com/zhenghuatan/rVADfast/issues"
Source = "https://github.com/zhenghuatan/rVADfast/"

[tool.setuptools.packages.find]
where = ["src"]
